--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="winter-theme">
-        <h1 id="title">Countdown to Christmas</h1> <!-- Add heading -->
+        <h1 id="title">Countdown to New Years</h1> <!-- Add heading -->
         <div id="countdown"></div>
     </div>
     <script>
@@ -28,7 +28,7 @@
             if (distance < 0) {
                 clearInterval(x);
                 document.getElementById('title').remove();
-                document.getElementById('countdown').innerHTML = "Merry Christmas!";
+                document.getElementById('countdown').innerHTML = "Happy New Years!";
             }
         }
 
